fixed all css bugs all cards lined up stats box no more gap STILL WORKING ON centering texts for quotes box

--- a/style.css
+++ b/style.css
@@ -6,72 +6,69 @@
 
 body {
   height:100vh;
-  width: 100vw;
-  position: relative;
   background-image: url("./GoT/background_04.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   position: fixed;
-  /* margin: 0% 10px; */
+  /* border: 1px solid black; */
+  margin: 0;
 }
 
 header {
-  border: 1px solid hotpink;
-    margin: 0% auto;
-  /* justify-content: center; */
+  /* border: 1px solid hotpink; */
+  height: 8vh;
 }
 
-/* instead of using a <h4>, use a div instead? */
-h4 {
+.title {
   text-align: center;
-  border: 1px solid black;
-  margin: 0%;
+  /* border: 1px solid black; */
+  height: 100%;
+  width: 100%;
   font-family: gameOfThrones;
   color: black;
-  font-size: 200%;
-  height: 5vh;
+  font-size: 275%;
 }
 
-.flex-container {
+/* .stats-container {
   display: flex;
   flex-direction: row;
-  /* border: 1px solid rebeccapurple; */
-  /* height: 20%;
-  width: 100%; */
-}
+  border: 1px solid rebeccapurple;
+} */
 
 .stats-flex-container {
   display: flex;
-  /* display: inline; */
   flex-direction: column;
   display: inline-block;
   /* border: 1px solid red; */
-  background-color: #686763;
-  border-radius: 35px;
-  margin: 0% .5%;
+  background-color: #9b1c31;
+  border-radius: 20px;
 }
 
 .bottom-box-container {
   /* border: 1px solid rebeccapurple; */
   display: flex;
-  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .bottom-box-sizing {
-  width: 50%;
+  width: 40%;
   text-align: center;
 }
 
 .quotes {
-  border: 1px solid rebeccapurple;
+  /* border: 1px solid rebeccapurple; */
   font-family: gameOfThrones;
   font-weight: 700;
   color: black;
   font-size: 150%;
-  background-color: #b08941;
-  border-radius: 35px;
-  margin: 0% .5%;
+  background-color: #015d75;
+  border-radius: 10px;
   text-align: center;
+}
+
+#quotes, #author {
+  text-align: center;
+  border: 1px solid black;
 }
 
 .margin {
@@ -79,49 +76,54 @@ h4 {
 }
 
 .indiv-stats {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   height: 5%;
-  width: 50%;
-  /* background-color: #fff9f3 ; */
+  width: 100%;
   font-weight: 1000;
   font-size: 150%;
   font-family: gameOfThrones;
   color: black;
+  display: inline-block;
+}
+
+#gamesPlayed, #attempts, #accuracy {
+  display: inline-block;
+  font-size: 150%
 }
 
 main {
-  margin-top: 0.5%;
-  height: 95vh;
+  height: 90vh;
   width: 100vw;
-  border: 1px solid yellow;
-  display: inline-block;
-  vertical-align: top;
+  /* border: 1px solid yellow; */
+  display: flex;
+  flex-direction: column;
 }
 
 #cards-flex-container {
-  border: 1px solid blue;
-  height: 78%;
-  width: 100%;
+  /* border: 1px solid blue; */
+  height: 75vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   position: relative;
-  margin-bottom: 1%;
-  /* text-align: center; */
-  /* justify-content: center; */
+  padding-right: 3%;
+  padding-left: 3%;
 }
 
 .card-container {
   position: relative;
-  border: 1px solid rgb(98, 160, 98);
-  flex: 0 1 calc(16% - 8px);
-  /* justify-content: center; */
-  /* text-align: center; */
+  /* border: 1px solid red; */
+  display: inline-block;
+  height: 30%;
+  width: 14.5%;
+  padding-right: 0.55%;
+  margin: 0.5%;
+  /* flex: 0 1 calc(16% - 8px); */
 }
 
-.sizing { /* this is for the cards */
+.backImages {
   height: 100%;
-  width: 50%;
+  width: 103.47%;
   background-size: cover;
   background-position: center;
   border-radius: 25px;
@@ -130,9 +132,12 @@ main {
 .lfz-bgi {
   background-image: url("./GoT/card_back_03.jpg");
   position: absolute;
-  /* margin: 0% auto; */
-
-  /* display: none; */
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  border-radius: 25px;
+  display: none;
 }
 
 .image1, .image10 {
